missing texture fix
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@151 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -173,6 +173,7 @@ menuitem "Grate (horizontal)"   "newent mapmodel 36"
 menuitem "Grate (vertical)"     "newent mapmodel 37"
 menuitem "Wrench"     		"newent mapmodel 38"
 menuitem "Screw"     		"newent mapmodel 39"
+menuitem "Hook"     		"newent mapmodel 49"
 
 newmenu signs
 
@@ -187,7 +188,8 @@ menuitem "Cigarette"     	"newent mapmodel 45"
 menuitem "Can" 			"newent mapmodel 46"
 menuitem "Fallen Can"     	"newent mapmodel 47"
 menuitem "Broken Wood"     	"newent mapmodel 48"
-menuitem "Hook"     		"newent mapmodel 49"
+menuitem "Coffee"               "newent mapmodel 50"
+
 
 newmenu entities
 
