--- a/ac/packages/maps/ac_complex.cfg
+++ b/ac/packages/maps/ac_complex.cfg
@@ -19,7 +19,7 @@ mapmodel 0  0 0 0 "signs/maint"
 mapmodel 0  0 0 0 "signs/caution"
 mapmodel 0 0 0 0 "signs/biohazard"
 mapmodel 1 2 0 0 "chair1"
-mapmodel 0 0 0 0 "laptop1"
+mapmodel 0 0 0 0 "coffeemug"
 mapmodel 0 0 0 0 "light01"
 mapmodel 0 0 0 0 "picture1"
 mapmodel 0 0 0 0 "gastank"   //see mapmodels/gastank/usage.txt
@@ -50,50 +50,50 @@ texture 0 "./makke/rock.jpg"
 texture 0 "./craig_fortune/terrain/Rock_cracked.jpg"
 texture 0 "./craig_fortune/terrain/Grass_mossy.jpg"
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
-texture 0 "./craig_fortune/crates/metalRim.jpg"
-texture 0 "./craig_fortune/crates/crate.jpg"
-texture 0 "./craig_fortune/crates/metalRim_weathered.jpg"
-texture 0 "./craig_fortune/crates/crate_weathered.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./craig_fortune/crates/light.jpg"
-texture 0 "./arcitool/Cotta1-dunkelbraun.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Cotta1-graubraun.jpg"
-texture 0 "./arcitool/Eternit-gelb.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Zaun.jpg"
-texture 0 "./arcitool/Palisaden.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/gittersteine2.jpg"
 texture 0 "./arcitool/pflaster2.jpg"
 texture 0 "./arcitool/Cotta1-hell.jpg"
-texture 0 "./makke/teppich.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/rock.jpg"  
 texture 0 "./makke/bricks_3.jpg"
-texture 0 "./arcitool/n_f-grau.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/rock.jpg"  
 texture 0 "./makke/rock.jpg"  
 texture 0 "./arcitool/Cotta1-grau.jpg"
 texture 0 "./arcitool/Cotta2-dunkel.jpg"
-texture 0 "./arcitool/Lochblech-rund-versetzt.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Wiese3.jpg"
 texture 0 "./arcitool/Wiese6.jpg"
-texture 0 "./arcitool/Cotta2-rot.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/rock.jpg"  
-texture 0 "./arcitool/n_f-blau.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Cotta1-graubraunhell.jpg"
 texture 0 "./arcitool/sisal21.jpg"
-texture 0 "./arcitool/Eternit-beige-b.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/rock.jpg"  
-texture 0 "./arcitool/Cotta1-rotbraun.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Rundholz.jpg"
 texture 0 "./arcitool/Cotta2-beige.jpg"
 texture 0 "./arcitool/Cotta2-grau.jpg"
-texture 0 "./arcitool/stulp1.jpg"
-texture 0 "./arcitool/stulp3.jpg"
-texture 0 "./arcitool/stulp4.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Cotta2-satt.jpg"
 texture 0 "./arcitool/schotter1.jpg"
 texture 0 "./arcitool/schotter2.jpg"
 texture 0 "./makke/rock.jpg"  
-texture 0 "./arcitool/stulp-unterteilt.jpg"
-texture 0 "./arcitool/Cotta1-braun.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Blockbohlen-natur.jpg"
 texture 0 "./arcitool/Glasbausteine.jpg"
 texture 0 "./arcitool/n_f-natur2.jpg"
@@ -102,14 +102,14 @@ texture 0 "./arcitool/asbest-raute.jpg"
 texture 0 "./arcitool/sichtbeton1.jpg"
 texture 0 "./arcitool/sichtbeton2.jpg"
 texture 0 "./arcitool/Wellblech1-1.jpg"
-texture 0 "./arcitool/deckel-natu.jpg"
-texture 0 "./arcitool/deckel-grau.jpg"
-texture 0 "./arcitool/Cotta1-gruengrau.jpg"
-texture 0 "./arcitool/NuF-graublau.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/rock.jpg"  
-texture 0 "./noctua/wall/synbr01.jpg"
-texture 0 "./noctua/wall/synbr02.jpg"
-texture 0 "./noctua/wall/synbr03.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/wall/conc01.jpg"
 texture 0 "./noctua/wall/conc02.jpg"
 texture 0 "./noctua/wall/conc03.jpg"
@@ -117,18 +117,18 @@ texture 0 "./noctua/wall/conc04.jpg"
 texture 0 "./noctua/wall/conc05.jpg"
 texture 0 "./noctua/wall/wall01.jpg"
 texture 0 "./noctua/wall/wall02.jpg"
-texture 0 "./noctua/wall/rauhfa01.jpg"
-texture 0 "./noctua/wall/brick01.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/wall/brick02.jpg"
 texture 0 "./noctua/wall/plast01.jpg"
 texture 0 "./noctua/wall/plast02.jpg"
 texture 0 "./noctua/wall/plast03.jpg"
 texture 0 "./noctua/wall/plast04.jpg"
 texture 0 "./makke/rock.jpg"  
-texture 0 "./noctua/wall/d_wall01.jpg"
-texture 0 "./noctua/wall/d_wall02.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/wood/blinds01.jpg"
-texture 0 "./noctua/wood/fence01.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/rock.jpg"  
 texture 0 "./makke/rock.jpg"  
 texture 0 "./noctua/wood/planks01.jpg"
@@ -147,10 +147,10 @@ texture 0 "./makke/rock.jpg"
 texture 0 "./noctua/wood/wood02.jpg"
 texture 0 "./noctua/wood/wood03.jpg"
 texture 0 "./noctua/wood/wood04.jpg"
-texture 0 "./noctua/glass/w_glass.jpg"
-texture 0 "./noctua/glass/glass01.jpg"
-texture 0 "./noctua/metal/plate01.jpg"
-texture 0 "./noctua/metal/m_mesh01.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/metal/verdig01.jpg"
 texture 0 "./noctua/metal/zinc01.jpg"
 texture 0 "./noctua/metal/zinc02.jpg"
@@ -168,20 +168,20 @@ texture 0 "./noctua/metal/metbgr04.jpg"
 texture 0 "./noctua/metal/brass01.jpg"
 texture 0 "./noctua/metal/copper01.jpg"
 texture 0 "./noctua/metal/copper02.jpg"
-texture 0 "./noctua/tiles/16tile-B.jpg"
-texture 0 "./noctua/tiles/16tile01.jpg"
-texture 0 "./noctua/tiles/16tile02.jpg"
-texture 0 "./noctua/tiles/16tile03.jpg"
-texture 0 "./noctua/tiles/16tile04.jpg"
-texture 0 "./noctua/tiles/16tile05.jpg"
-texture 0 "./noctua/tiles/16tile06.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/tiles/16tile07.jpg"
-texture 0 "./noctua/tiles/16tile08.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/tiles/16tile09.jpg"
 texture 0 "./noctua/tiles/16tile10.jpg"
 texture 0 "./noctua/tiles/16tile11.jpg"
 texture 0 "./noctua/tiles/16tile12.jpg"
-texture 0 "./noctua/tiles/16tile13.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/stone/marmor01.jpg"
 texture 0 "./makke/rock.jpg"  
 texture 0 "./noctua/stone/stone02.jpg"
@@ -192,11 +192,11 @@ texture 0 "./noctua/stone/stone06.jpg"
 texture 0 "./noctua/stone/stone07.jpg"
 texture 0 "./noctua/stone/stone08.jpg"
 texture 0 "./noctua/stone/stone09.jpg"
-texture 0 "./noctua/stone/stone10.jpg"
-texture 0 "./noctua/stone/stone11.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/stone/stone12.jpg"
 texture 0 "./noctua/stone/stone13.jpg"
-texture 0 "./noctua/stone/stone14.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/stone/stone15.jpg"
 texture 0 "./noctua/stone/stone16.jpg"
 texture 0 "./noctua/stone/stone17.jpg"
@@ -211,14 +211,14 @@ texture 0 "./noctua/water/water05.jpg"
 texture 0 "./makke/rock.jpg"  
 texture 0 "./boeck/gully.jpg"
 texture 0 "./makke/rock.jpg"  
-texture 0 "./noctua/textile/canvas01.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/rock.jpg"  
 texture 0 "./noctua/textile/carpet01.jpg"
 texture 0 "./noctua/textile/carpet02.jpg"
 texture 0 "./noctua/textile/carpet03.jpg"
 texture 0 "./noctua/textile/carpet04.jpg"
 texture 0 "./noctua/textile/carpet05.jpg"
-texture 0 "./noctua/textile/carpet06.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./zastrow/2wood_crate_03.jpg"
 texture 0 "./zastrow/3wood_crate_02.jpg"
 texture 0 "./zastrow/wood_crate_03.jpg"
@@ -231,7 +231,7 @@ texture 0 "./makke/mauer2.jpg"                       //./noctua/textile/textil03
 texture 0 "./makke/mauer1.jpg"                        //   ./noctua/textile/textil04
 texture 0 "./makke/brickwall.jpg"                              //./noctua/textile/textil05.jpg
 texture 0 "./makke/stein.jpg"                      //texture 0 "./noctua/textile/gaze01.jpg"
-texture 0 "./noctua/ground/dry_mud.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/ground/asph01.jpg"
 texture 0 "./noctua/ground/asph02.jpg"
 texture 0 "./noctua/ground/asph03.jpg"
@@ -254,11 +254,11 @@ texture 0 "./noctua/ground/cobbles01.jpg"
 texture 0 "./makke/rock.jpg"  
 texture 0 "./DigitalFlux/gray_bricks_01.jpg"
 texture 0 "./DigitalFlux/gray_bricks_02.jpg"
-texture 0 "./DigitalFlux/gray_bricks_03.jpg"
-texture 0 "./DigitalFlux/gray_bricks_04.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./DigitalFlux/reddish_brown_dirt_01.jpg"
 texture 0 "./DigitalFlux/reddish_brown_dirt_02.jpg"
-texture 0 "./DigitalFlux/dirty_asphalt_01.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./DigitalFlux/dirty_asphalt_02.jpg"
 texture 0 "./DigitalFlux/dirty_asphalt_03.jpg"
 texture 0 "./DigitalFlux/light_brown_dirt_01.jpg"
@@ -266,16 +266,16 @@ texture 0 "./DigitalFlux/light_brown_dirt_02.jpg"
 texture 0 "./DigitalFlux/dirt_pebbles_01.jpg"
 texture 0 "./makke/rock.jpg"  
 texture 0 "./makke/stuck1.jpg"
-texture 0 "./makke/bricks_1.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/bricks_2.jpg"
-texture 0 "./makke/bricks_2_large.jpg"
-texture 0 "./makke/bricks_2_brown.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/stairtrim.jpg"
 texture 0 "./makke/concrete.jpg"
 texture 0 "./makke/concrete_trim.jpg"
 texture 0 "./makke/concrete_trim_small.jpg"
 texture 0 "./makke/rock.jpg"  
-texture 0 "./makke/floor1.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/klappe.jpg"
 texture 0 "./makke/neuklappe.jpg"
