--- a/ac/packages/maps/ac_depot.cfg
+++ b/ac/packages/maps/ac_depot.cfg
@@ -1,35 +1,8 @@
 // "The Storage Depot" for ActionCUBE by MitaMAN (June-11-2005)
-// how to load map: map ac_depot
-
-// *IMPORTANT NOTE FOR AC-MAPPERS*
-
-musicvol 200      // set higher if you want (max 255)
-
-if (= $gamemode 0) [at "Cairo_Egypt_a.ogg Greece_a.ogg Zurich_Switzerland_a.ogg" (rnd 3)]
-
-
-music $s
 
 fog 350
 fogcolour 0
 
-
-
-// BE SURE TO COPY THIS FILE AND MAKE IT YOUR MAP CONFIG BEFORE(!!) YOU EDIT ANYTHING.
-// THEN START AC, GO EDIT-MODE,GO /NEWMAP then SAVE YOUR MAP (AS YOURCONFIGNAME.CGZ) AND RELOAD IT!
-// OTHERWISE YOU WILL USE THE START MAPS SETTINGS WHICH ARE DIFFRENT SO UPON 2ND LOAD YOUR MAP
-// WOULD BE SCREWED UP...
-
-// default textures/music/models/skybox for maps
-
-// on every map load, this file will be executed, followed by
-// "package.cfg" in the package dir of the map, and "<mapname>.cfg",
-// which you can use to override the settings in this file.
-
-// reset the mapmodels used for this map (replace this with your own mapmodel defs if you want):
-// the number in comments is what you use with "newent mapmodel N"
-
-//  mapmodels - check /packages/models/mapmodels/
 
 mapmodelreset // start @ zero
 
@@ -119,22 +92,22 @@ texture 0 "./mitaman/golgotha/tunnel_ceiling.jpg"
 texture 0 "./craig_fortune/terrain/Rock_rubble.jpg"
 texture 0 "./mitaman/golgotha/hhroofgray.jpg"
 texture 0 "./mitaman/golgotha/metal_bumps2.jpg"
-texture 0 "./mitaman/golgotha/metalrock.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./craig_fortune/terrain/mud.jpg"
 texture 0 "./craig_fortune/terrain/rubble.jpg"                      
 texture 0 "./craig_fortune/terrain/Rock_cracked.jpg"          
-texture 0 "./mitaman/grsites/brick005.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
-texture 0 "./craig_fortune/crates/metalRim.jpg"
-texture 0 "./craig_fortune/crates/crate.jpg"
-texture 0 "./craig_fortune/crates/metalRim_weathered.jpg"
-texture 0 "./craig_fortune/crates/crate_weathered.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./craig_fortune/crates/light.jpg"
-texture 0 "./arcitool/Cotta1-dunkelbraun.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Cotta1-graubraun.jpg"
-texture 0 "./arcitool/Eternit-gelb.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Zaun.jpg"
-texture 0 "./arcitool/Palisaden.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/gittersteine2.jpg"
 texture 0 "./arcitool/pflaster2.jpg"                         
 texture 0 "./arcitool/Cotta1-hell.jpg"
@@ -143,32 +116,32 @@ texture 0 "./boeck/rolltor.jpg"
 texture 0 "./makke/bricks_3.jpg"                                                     
 texture 0 "./mitaman/3dcafe/stone18.jpg"
 texture 0 "./makke/wood_01.jpg"                                 
-texture 0 "./boeck/wood_008.jpg"                   
+texture 0 "./makke/rock.jpg"                  
 texture 0 "./arcitool/Cotta1-grau.jpg"
 texture 0 "./arcitool/Cotta2-dunkel.jpg"
 texture 0 "./makke/box_4.jpg"                     //2x2 and 3x3 version of this crate can be found in /textures/makke
-texture 0 "./mitaman/3dcafe/objects12.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./mitaman/grsites/brick051.jpg"
-texture 0 "./arcitool/Cotta2-rot.jpg"
-texture 0 "./makke/18-Brick.jpg"                      
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg"                      
 texture 0 "./mitaman/3dcafe/door12.jpg"
 texture 0 "./arcitool/Cotta1-graubraunhell.jpg"
 texture 0 "./boeck/rolltor.jpg"
-texture 0 "./arcitool/Eternit-beige-b.jpg"
-texture 0 "./makke/02-GroundCover.jpg"   
-texture 0 "./arcitool/Cotta1-rotbraun.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg"  
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Rundholz.jpg"
 texture 0 "./arcitool/Cotta2-beige.jpg"
 texture 0 "./arcitool/Cotta2-grau.jpg"
-texture 0 "./arcitool/stulp1.jpg"
-texture 0 "./arcitool/stulp3.jpg"
-texture 0 "./arcitool/stulp4.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Cotta2-satt.jpg"
 texture 0 "./arcitool/schotter1.jpg"
 texture 0 "./arcitool/schotter2.jpg"
-texture 0 "./arcitool/Eternit-grau-c.jpg"
-texture 0 "./arcitool/stulp-unterteilt.jpg"
-texture 0 "./arcitool/Cotta1-braun.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./arcitool/Blockbohlen-natur.jpg"
 texture 0 "./arcitool/Glasbausteine.jpg"
 texture 0 "./mitaman/grsites/brick065.jpg"
@@ -177,14 +150,14 @@ texture 0 "./arcitool/asbest-raute.jpg"
 texture 0 "./arcitool/sichtbeton1.jpg"
 texture 0 "./arcitool/sichtbeton2.jpg"
 texture 0 "./arcitool/Wellblech1-1.jpg"
-texture 0 "./arcitool/deckel-natu.jpg"
-texture 0 "./arcitool/deckel-grau.jpg"
-texture 0 "./arcitool/Cotta1-gruengrau.jpg"
-texture 0 "./mitaman/grsites/drock079.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/brickwall.jpg"                              
-texture 0 "./noctua/wall/synbr01.jpg"
-texture 0 "./noctua/wall/synbr02.jpg"
-texture 0 "./noctua/wall/synbr03.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/wall/conc01.jpg"          
 texture 0 "./noctua/wall/conc02.jpg"        
 texture 0 "./noctua/wall/conc03.jpg"       
@@ -192,7 +165,7 @@ texture 0 "./noctua/wall/conc04.jpg"
 texture 0 "./noctua/wall/conc05.jpg"       
 texture 0 "./noctua/wall/wall01.jpg"
 texture 0 "./noctua/wall/wall02.jpg"          
-texture 0 "./noctua/wall/rauhfa01.jpg"    
+texture 0 "./makke/rock.jpg"  
 texture 0 "./boeck/rolltor.jpg"
 texture 0 "./noctua/wall/brick02.jpg"       
 texture 0 "./noctua/wall/plast01.jpg"            
@@ -201,10 +174,10 @@ texture 0 "./noctua/wall/plast03.jpg"
 texture 0 "./noctua/wall/plast04.jpg"           
 texture 0 "./makke/rock.jpg"                            
 texture 0 "./noctua/wall/d_wall01.jpg"        
-texture 0 "./noctua/wall/d_wall02.jpg"        
+texture 0 "./makke/rock.jpg"        
 texture 0 "./mitaman/zastrow/sub_doors512A10.jpg"       
 texture 0 "./mitaman/zastrow/sub_doors512A16.jpg"         
-texture 0 "./mitaman/golgotha/castle_walls_tall-original.jpg"    
+texture 0 "./makke/rock.jpg"    
 texture 0 "./mitaman/golgotha/elecpanelstwo.jpg"    
 texture 0 "./noctua/wood/planks01.jpg"         
 texture 0 "./noctua/wood/planks02.jpg"        
@@ -214,18 +187,18 @@ texture 0 "./noctua/wood/bark01.jpg"
 texture 0 "./mitaman/zastrow/sub_doors512B05.jpg"
 texture 0 "./makke/bricky.jpg"             
 texture 0 "./makke/bricks_2.jpg"                       
-texture 0 "./makke/bricks_2_large.jpg"            
-texture 0 "./makke/bricks_2_brown.jpg"            
+texture 0 "./makke/rock.jpg"            
+texture 0 "./makke/rock.jpg"            
 texture 0 "./boeck/stone_022.jpg"           
 texture 0 "./makke/mauer1.jpg"             
 texture 0 "./makke/mauer2.jpg"         
 texture 0 "./mitaman/zastrow/sub_window31.jpg"        
 texture 0 "./mitaman/zastrow/sub_window33.jpg"       
-texture 0 "./mitaman/zastrow/wood_shingles1.jpg"        
-texture 0 "./noctua/glass/w_glass.jpg"
-texture 0 "./noctua/glass/glass01.jpg"
-texture 0 "./noctua/metal/plate01.jpg"
-texture 0 "./noctua/metal/m_mesh01.jpg"
+texture 0 "./makke/rock.jpg"        
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/metal/verdig01.jpg"
 texture 0 "./noctua/metal/zinc01.jpg"
 texture 0 "./noctua/metal/zinc02.jpg"
@@ -244,11 +217,11 @@ texture 0 "./noctua/metal/brass01.jpg"
 texture 0 "./noctua/metal/copper01.jpg"
 texture 0 "./noctua/metal/copper02.jpg"
 
-texture 0 "./mitaman/grsites/lrock048.jpg"
-texture 0 "./mitaman/grsites/rock178.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./mitaman/grsites/wood060.jpg"
 texture 0 "./mitaman/3dcafe/door15.jpg"
-texture 0 "./mitaman/lemog/022bois.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./boeck/rolltor.jpg"
 //texture 0 "./noctua/tiles/16tile-B.jpg"
 //texture 0 "./noctua/tiles/16tile01.jpg"
@@ -257,7 +230,7 @@ texture 0 "./boeck/rolltor.jpg"
 //texture 0 "./noctua/tiles/16tile04.jpg"
 //texture 0 "./noctua/tiles/16tile05.jpg"
 
-texture 0 "./noctua/tiles/16tile06.jpg"
+texture 0 "./makke/rock.jpg" 
 
 texture 0 "./mitaman/3dcafe/objects09_a.jpg"
 texture 0 "./boeck/rolltor.jpg"
@@ -271,7 +244,7 @@ texture 0 "./noctua/tiles/16tile10.jpg"
 //texture 0 "./noctua/tiles/16tile11.jpg"
 //texture 0 "./noctua/tiles/16tile12.jpg"
 
-texture 0 "./noctua/tiles/16tile13.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/stone/marmor01.jpg"
 texture 0 "./boeck/stone_013.jpg"          
 texture 0 "./noctua/stone/stone02.jpg"
@@ -288,7 +261,7 @@ texture 0 "./mitaman/3dcafe/objects08.jpg"
 texture 0 "./mitaman/3dcafe/door10.jpg"
 texture 0 "./noctua/stone/stone12.jpg"
 texture 0 "./noctua/stone/stone13.jpg"
-texture 0 "./noctua/stone/stone14.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/stone/stone15.jpg"
 texture 0 "./noctua/stone/stone16.jpg"
 //texture 0 "./noctua/stone/stone17.jpg"
@@ -311,11 +284,11 @@ texture 0 "./makke/stein.jpg
 texture 0 "./makke/door.jpg"          
 
 texture 0 "./boeck/rolltor.jpg"
-texture 0 "./mitaman/lemog/37_melange.jpg"
-texture 0 "./mitaman/bishop/Stone02.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./boeck/rolltor.jpg"
-texture 0 "./mitaman/grsites/metal022.jpg"
-texture 0 "./mitaman/grsites/metal021.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 //texture 0 "./noctua/textile/carpet01.jpg"
 //texture 0 "./noctua/textile/carpet02.jpg"
 //texture 0 "./noctua/textile/carpet03.jpg"
@@ -330,9 +303,9 @@ texture 0 "./makke/neuklappe.jpg"
 texture 0 "./makke/panel.jpg"             
 
 texture 0 "./boeck/rolltor.jpg"
-texture 0 "./mitaman/noctua/cobbles02.jpg"
-texture 0 "./mitaman/zastrow/block_wall_06.jpg"
-texture 0 "./mitaman/zastrow/brick_wall_05.jpg"
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
+texture 0 "./makke/rock.jpg" 
 texture 0 "./mitaman/zastrow/metal_overlaps.jpg"
 texture 0 "./mitaman/zastrow/metal_plate_fill.jpg"
 texture 0 "./mitaman/zastrow/metal_siding_kinks.jpg"
@@ -344,13 +317,13 @@ texture 0 "./mitaman/zastrow/metal_siding_kinks.jpg"
 //texture 0 "./noctua/textile/textil05.jpg"
 //texture 0 "./noctua/textile/gaze01.jpg"
 
-texture 0 "./noctua/ground/dry_mud.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./noctua/ground/asph01.jpg"                  
 texture 0 "./noctua/ground/asph02.jpg"                
 texture 0 "./noctua/ground/asph03.jpg"                 
 texture 0 "./noctua/ground/pebble01.jpg"
 texture 0 "./makke/11-Brick.jpg"                 
-texture 0 "./makke/floor1.jpg"                
+texture 0 "./makke/rock.jpg"                
 texture 0 "./noctua/ground/ground02.jpg"              
 texture 0 "./makke/dcp_floor01.jpg"               
 texture 0 "./boeck/rolltor.jpg"            
@@ -367,11 +340,11 @@ texture 0 "./noctua/ground/cobbles01.jpg"
 texture 0 "./makke/dirt_01.jpg"                             
 texture 0 "./DigitalFlux/gray_bricks_01.jpg"                
 texture 0 "./DigitalFlux/gray_bricks_02.jpg"                 
-texture 0 "./DigitalFlux/gray_bricks_03.jpg"                
-texture 0 "./DigitalFlux/gray_bricks_04.jpg"                
+texture 0 "./makke/rock.jpg"                 
+texture 0 "./makke/rock.jpg"                
 texture 0 "./DigitalFlux/reddish_brown_dirt_01.jpg"
 texture 0 "./DigitalFlux/reddish_brown_dirt_02.jpg"
-texture 0 "./DigitalFlux/dirty_asphalt_01.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./DigitalFlux/dirty_asphalt_02.jpg"
 texture 0 "./DigitalFlux/dirty_asphalt_03.jpg"
 texture 0 "./DigitalFlux/light_brown_dirt_01.jpg"
@@ -381,15 +354,15 @@ texture 0 "./makke/01-CMU.jpg"
 texture 0 "./makke/lampe.jpg" 
 texture 0 "./makke/lampe_tile.jpg"
 texture 0 "./makke/lampe_tile2.jpg"
-texture 0 "./arcitool/Glasbausteine_licht.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/aircon.jpg"
 texture 0 "./makke/aircon_sm.jpg"
 texture 0 "./boeck/aircon2.jpg"
-texture 0 "./boeck/stone_038.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./makke/concrete.jpg"
 texture 0 "./makke/concrete_trim.jpg"
 texture 0 "./makke/concrete_trim_small.jpg"
-texture 0 "./mitaman/bishop/Stone05.jpg"
+texture 0 "./makke/rock.jpg" 
 texture 0 "./zastrow/2wood_crate_12.jpg"
 texture 0 "./zastrow/3wood_crate_12.jpg" 
 texture 0 "./zastrow/wood_crate_12.jpg"
