Changed menus cfg
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@152 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -4,16 +4,13 @@ bind ESCAPE "showmenu main"    // it all starts here
 
 newmenu main
 
-menuitem "Join Game"  	                "servermenu"
-menuitem "Refresh Serverlist" 		"updatefrommaster"
-menuitem "Vote.." 			"showmenu gamemode"
-menuitem "Load Map.."			"showmenu maps"
-menuitem "Change Team"			"showmenu team"
-menuitem "Disconnect"			"disconnect"
-menuitem "Options.."                      "showmenu options"
-menuitem "Editing.."        		"showmenu editing"
-menuitem "about/credits/help"           "showmenu about"
-menuitem "Quit"				"quit"
+menuitem "Multiplayer"  	        "showmenu multiplayer"
+menuitem "Team/Player Setup"		"showmenu setup"
+menuitem "Load Map"			"showmenu maps"
+menuitem "Options"                      "showmenu options"
+menuitem "Editing"        		"showmenu editing"
+menuitem "About/Credits/Help"           "showmenu about"
+menuitem "quit"				"quit"
 
 // menubg	 "textures/blah..."
 // menumdl path frame range rotation-speed{0-100} scale{0-100}
@@ -39,12 +36,29 @@ newmenu maps
 
 genmapitems "ac_complex ac_mines ac_depot ac_desert"
 
+newmenu setup
+
+menuitem "Select Team"           "showmenu team"
+menuitem "Select Skin"           "showmenu skins"
+menuitem "Select Weapon"         "showmenu primary"    
+menuitem "Set Name"              "saycommand /name"
+
+newmenu skins
+
+menuitem "Not Available"
+
 newmenu team
 
 menumdl playermodels/terrorist 0 1 50 10
 menuitem "Terrorists"			"team 0" "chmenumdl team playermodels/terrorist 0 1 50 10"
 menuitem "Counter Terrorists"		"team 1" "chmenumdl team playermodels/counterterrorist 0 1 50 10"
 
+newmenu multiplayer
+
+menuitem "Join Game"              "servermenu"
+menuitem "Update Servers"         "updatefrommaster"
+menuitem "Vote"                   "showmenu gamemode"
+menuitem "Disconnect"             "disconnect"
 
 newmenu gamemode
 
@@ -260,8 +274,6 @@ menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen" "chmenumdl eq
 
 newmenu options
 
-menuitem "set name"                                                 "saycommand /name"
-menuitem "->to change name permanently, edit autoexec.cfg"            ""
 menuitem "tweak minlod.. (higher = less popup, possibly lower fps)" "showmenu minlod"
 menuitem "tweak fpsrange.. (higher = possibly more popup)"          "showmenu fpsrange"
 menuitem "tweak water subdivision.."                                "showmenu watersubdiv"
@@ -311,8 +323,8 @@ newmenu about
 menuitem "Actioncube beta v.1.0" ""
 menuitem "                     ...help" "showmenu help"
 menuitem "                     ...credits" "showmenu credits"
-menuitem "by the AC-Team" ""
-menuitem "http://www.actioncube.com" "echo sorry no built-in web browser yet :)"
+menuitem "by Rabid Viper Productions" "showmenu credits"
+menuitem "actioncube.sprintf.org" "echo sorry no built-in web browser yet :)"
 menuitem "a cube mod/tc based on the" ""
 menuitem ""
 menuitem "Cube game/engine" " "
@@ -334,18 +346,16 @@ menuitem "-for further information read readme.html-"
 newmenu credits
 
 menuitem "Arghvark    Project Leader" ""
-menuitem "              Coding" ""
-menuitem "driAn        Lead Coder" "" 
-menuitem "makkE       Lead Mapper/Modeller" ""
-menuitem "              Models, Skins, Animation" ""
-menuitem "              Sound, some Textures" ""
+menuitem "              Concept, Coding" ""
+menuitem "driAn        Lead Coder, Webdesign" "" 
+menuitem "makkE       Lead Artist" ""
+menuitem "              Maps, Models, Skins, Animation" ""
+menuitem "              Sound, some Textures, 2D-Art" ""
 menuitem "Nieb         Models, Hosting" ""
-menuitem "Jcdpc        Maps, Models, Skins" ""
 menuitem "Mitaman     Maps,Ressources" ""
 menuitem "Rick         Bots, Win32-Compiling" ""
 menuitem "Verbal       QA, Advisor, Lead Tester" ""
-menuitem "dtd          Webdesign, Hosting" ""
 menuitem ""
 menuitem "Thanks to:" ""
-menuitem "Wouter van Oortmersson, DCP (Music, Models)," ""
-menuitem "Boeck, ...  " ""
+menuitem "Wouter van Oortmersson, DCP (Music)," ""
+menuitem "JCDPC (Laptop Model, Company), dtd (Hosting), Boeck" ""
