ac_desert skymaps/textures/changes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@158 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -60,9 +60,10 @@ mapmodel 0 0 0 0 "coffeemug"       //50
 
 //loadsky "textures/skymaps/steini/steini2"
 //loadsky "textures/skymaps/steini/steini3"
-loadsky "textures/skymaps/steini/steini4"
+//loadsky "textures/skymaps/steini/steini4"
 //loadsky "textures/skymaps/makke/rocky"
 //loadsky "textures/skymaps/makke/mountain"
+loadsky "textures/skymaps/makke/sand"
 
 // used textures in this map - check /packages/textures/
 
@@ -101,7 +102,7 @@ texture 0 "./DigitalFlux/gray_bricks_02.jpg"
 texture 0 "./DigitalFlux/gray_bricks_01.jpg"
 texture 0 "./makke/bricks_2.jpg"
 texture 0 "./makke/bricks_3.jpg"
-texture 0 "./makke/brickwall.jpg"
+texture 0 "./makke/d_brick.jpg"
 texture 0 "./noctua/wall/brick02.jpg"
 texture 0 "./sub/brick_wall_08.jpg"
 texture 0 "./sub/brick_wall_09.jpg"
@@ -144,7 +145,7 @@ texture 0 "./arcitool/sisal21.jpg"
 texture 0 "./noctua/ground/asph01.jpg"
 texture 0 "./noctua/ground/asph02.jpg"
 texture 0 "./noctua/ground/asph03.jpg"
-texture 0 "./makke/asph_01.jpg"
+texture 0 "./makke/platten.jpg"
 texture 0 "./DigitalFlux/dirty_asphalt_02.jpg"
 texture 0 "./DigitalFlux/dirty_asphalt_03.jpg"
 texture 0 "./makke/concrete.jpg"
