--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -24,9 +24,9 @@ mapmodel 1 8 0 0 "fence"           //16 mind the orientation of fence components
 mapmodel 1 8 0 0 "fencepost"       //17  
 mapmodel 1 8 0 0 "fencegate_open"  //18
 mapmodel 1 8 0 0 "fencegate_closed"//19
-mapmodel 0 0 0 0 "grass01"         //20
-mapmodel 0 0 0 0 "grass02"         //21
-mapmodel 0 0 0 0 "plant01"         //22
+mapmodel 0 0 0 0 "grass01_d"       //20
+mapmodel 0 0 0 0 "grass02_d"       //21
+mapmodel 0 0 0 0 "plant01_d"       //22
 mapmodel 1 7 0 0 "tree01"          //23
 mapmodel 1 2 0 0 "chair1"          //24
 mapmodel 0 0 0 0 "laptop1"         //25
