ac_desert_wip, streetsign
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@164 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -48,7 +48,7 @@ mapmodel 1 2 0 0 "gutter_v"        //37
 mapmodel 0 0 0 0 "wrench"          //38
 mapmodel 0 0 0 0 "screw"           //39
 mapmodel 0  0 0 0 "signs/flammable"//40
-mapmodel 0  0 0 0 "signs/speed"    //41
+mapmodel 0  0 0 0 "signs/arab"     //41
 mapmodel 0  0 0 0 "signs/maint"    //42
 mapmodel 0  0 0 0 "signs/caution"  //43
 mapmodel 0 0 0 0 "signs/biohazard" //44 
