ac_desert_wip, ladder
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@165 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -13,7 +13,7 @@ mapmodel 0 7 0 0 "ladder_7x"       //5
 mapmodel 0 8 0 0 "ladder_8x"       //6
 mapmodel 0 10 0 0 "ladder_10x"     //7
 mapmodel 0 11 0 0 "ladder_11x"     //8
-mapmodel 0 15 0 0 "ladder_15x"     //9 
+mapmodel 0 15 0 0 "ladderx15_center3"//9 
 mapmodel 1 12 0 0 "streetlamp"     //10
 mapmodel 1 12 0 0 "streetlamp"     //11
 mapmodel 3  2 0 0 "bench"          //12
