ac_desert_wip..
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@167 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -118,6 +118,7 @@ texture 0 "./makke/bricky.jpg"
 texture 0 "./makke/01-CMU.jpg"
 texture 0 "./makke/mauer1.jpg"
 texture 0 "./makke/mauer2.jpg"
+texture 0 "./d_brick.jpg"
 texture 0 "./mitaman/3dcafe/stone18.jpg"
 
 //---- tiles --------
@@ -135,6 +136,7 @@ texture 0 "./arcitool/Cotta2-beige.jpg"
 texture 0 "./arcitool/Cotta2-dunkel.jpg"
 texture 0 "./arcitool/Cotta2-grau.jpg"
 texture 0 "./arcitool/Cotta2-satt.jpg"
+texture 0 "./makke/tiles.jpg"
 
 //------floorings----------------
 
@@ -147,6 +149,7 @@ texture 0 "./makke/br_tiles.jpg"
 texture 0 "./makke/c_tile.jpg"
 texture 0 "./makke/pebbles_01.jpg"
 texture 0 "./arcitool/sisal21.jpg"
+texture 0 "./makke/platten.jpg"
 
 //------asphalt/concrete------------------------
 
@@ -222,7 +225,6 @@ texture 0 "./boeck/wood_010.jpg"
 texture 0 "./boeck/wood_017.jpg"
 texture 0 "./makke/wood_01.jpg"
 texture 0 "./makke/wood_01_b.jpg"
-texture 0 "./makke/dcp_floor01.jpg"
 texture 0 "./arcitool/n_f-natur2.jpg"
 texture 0 "./arcitool/Blockbohlen-natur.jpg"
 texture 0 "./arcitool/Zaun.jpg"
@@ -332,8 +334,6 @@ texture 0 "./makke/lampe_tile.jpg"
 texture 0 "./makke/lampe_tile_a.jpg"
 texture 0 "./makke/lampe_tile2.jpg"
 texture 0 "./makke/lampe_tile2_a.jpg"
-texture 0 "./kurt/klite1.jpg"
-texture 0 "./kurt/klite2.jpg"
 texture 0 "./makke/stairtrim.jpg"
 texture 0 "./makke/metalstair1.jpg"
 texture 0 "./makke/metalstair2.jpg"
