dcp-cube models wipeout
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@171 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_complex.cfg
+++ b/ac/packages/maps/ac_complex.cfg
@@ -2,9 +2,9 @@ loadsky "textures/skymaps/makke/mountain"
 fog 500
 fogcolour 0x968070
 mapmodelreset						
-mapmodel 1  1 0 0 "dcp/qb2x2"
-mapmodel 2  1 0 0 "dcp/qb4x4"
-mapmodel 3  1 0 0 "dcp/qb8x8"
+mapmodel 0 0 0 0 "nothing"         
+mapmodel 0 0 0 0 "nothing"         
+mapmodel 0 0 0 0 "nothing"         
 mapmodel 3  1 0 0 "comp_bridge"
 mapmodel 0 10 0 0 "ladder_10x"
 mapmodel 1  3 0 0 "barrel"
