--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -5,9 +5,9 @@ watersubdiv 16
 
 mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
 //                                     models that can´t be clipped properly otherwise
-mapmodel 1  1 0 0 "dcp/qb2x2"      //1
-mapmodel 2  1 0 0 "dcp/qb4x4"      //2  
-mapmodel 3  1 0 0 "dcp/qb8x8"      //3
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing"
 mapmodel 3  1 0 0 "comp_bridge"    //4
 mapmodel 0 7 0 0 "ladder_7x"       //5
 mapmodel 0 8 0 0 "ladder_8x"       //6
