--- a/ac/packages/maps/ac_depot.cfg
+++ b/ac/packages/maps/ac_depot.cfg
@@ -6,9 +6,9 @@ fogcolour 0
 
 mapmodelreset // start @ zero
 
-mapmodel 1  1 0 0 "dcp/qb2x2"      //0
-mapmodel 2  1 0 0 "dcp/qb4x4"      //1  
-mapmodel 3  1 0 0 "dcp/qb8x8"      //2
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing"
 mapmodel 3  1 0 0 "comp_bridge"    //3
 mapmodel 0 10 0 0 "ladder_10x"     //4
 //mapmodel 0 11 0 0 "ladder_11x"
