--- a/ac/packages/maps/ac_mines.cfg
+++ b/ac/packages/maps/ac_mines.cfg
@@ -1,9 +1,9 @@
 fog 1024
 mapmodelreset // start @ zero
 
-mapmodel 1  1 0 0 "dcp/qb2x2"      //0
-mapmodel 2  1 0 0 "dcp/qb4x4"      //1  
-mapmodel 3  1 0 0 "dcp/qb8x8"      //2
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing" 
+mapmodel 0 0 0 0 "nothing"
 mapmodel 3  1 0 0 "comp_bridge"    //3
 mapmodel 0 0 0 0 "ladder_10x"     //4
 mapmodel 1  3 0 0 "barrel"         //5
