desert update, 2 new props
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@192 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -62,6 +62,8 @@ mapmodel 0 0 0 0 "can2"            //44
 mapmodel 0 0 0 0 "wood01"          //45
 mapmodel 0 0 0 0 "hook"            //46
 mapmodel 0 0 0 0 "coffeemug"       //47
+mapmodel 0 0 0 0 "flyer"           //48
+mapmodel 0 0 0 0 "poster"          //49 mind z-buffer issues on 16bit!
 
 // skybox for this map - check /packages/skymaps/
 
