--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -17,7 +17,7 @@ mapmodel 0 15 0 0 "ladderx15_center3"//9
 mapmodel 1 12 0 0 "streetlamp"     //10
 mapmodel 1 12 0 0 "streetlamp"     //11
 mapmodel 3  2 0 0 "bench"          //12
-mapmodel 2 4 0 0 "dumpster"        //13
+mapmodel 0 0 0 0 "flyer"           //13
 mapmodel 0 0 0 0 "roadblock01"     //14 use nothing mapmodels to clip
 mapmodel 0 0 0 0 "roadblock02"     //15
 mapmodel 1 8 0 0 "fence"           //16 mind the orientation of fence components (lightning)
@@ -27,7 +27,7 @@ mapmodel 1 8 0 0 "fencegate_closed"//19
 mapmodel 0 0 0 0 "grass01_d"       //20
 mapmodel 0 0 0 0 "grass02_d"       //21
 mapmodel 0 0 0 0 "plant01_d"       //22
-mapmodel 1 7 0 0 "tree01"          //23
+mapmodel 0 0 3 0 "poster"          //23
 mapmodel 1 2 0 0 "chair1"          //24
 mapmodel 0 0 0 0 "laptop1"         //25
 mapmodel 0 0 0 0 "picture1"        //26 If you wish to put a custom pic in the frame
