--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -200,6 +200,8 @@ menuitem "Can" 			"newent mapmodel 43"
 menuitem "Fallen Can"     	"newent mapmodel 44"
 menuitem "Broken Wood"     	"newent mapmodel 45"
 menuitem "Coffee"               "newent mapmodel 47"
+menuitem "Flyer"                "newent mapmodel 48"
+menuitem "Poster"               "newent mapmodel 49"
 
 
 newmenu entities
