--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -40,7 +40,7 @@ mapmodel 0 0 0 0 "light01"         //29
 mapmodel 0 0 0 0 "bulb"            //30
 mapmodel 1  3 0 0 "barrel"         //31
 mapmodel 1  2 0 0 "barrel2"        //32
-mapmodel 0  0 0 0 "elektro"        //33  
+mapmodel 0  0 0 0 "sail"           //33  
 mapmodel 3  1 0 0 "europalette"    //34
 mapmodel 0 0 0 0 "gastank"         //35 use nothing model to clip
 mapmodel 2 1 0 0 "gutter_h"        //36
