mapmodel menu adjustment
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@197 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -64,6 +64,12 @@ mapmodel 0 0 0 0 "hook"            //46
 mapmodel 0 0 0 0 "coffeemug"       //47
 mapmodel 0 0 0 0 "flyer"           //48
 mapmodel 0 0 0 0 "poster"          //49 mind z-buffer issues on 16bit!
+mapmodel 0 0 0 0 "grass01_d"       //50
+mapmodel 0 0 0 0 "grass02_d"       //51
+mapmodel 0 0 0 0 "plant01_d"       //52
+mapmodel 0 0 0 0 "grass01_s"       //53
+mapmodel 0 0 0 0 "grass02_s"       //54
+mapmodel 0 0 0 0 "plant01_s"       //55
 
 // skybox for this map - check /packages/skymaps/
 
