--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -159,6 +159,12 @@ menuitem "Grass1"     		"newent mapmodel 17"
 menuitem "Grass2"     		"newent mapmodel 18"
 menuitem "Plant1"     		"newent mapmodel 19"
 menuitem "Tree1"     		"newent mapmodel 20"
+menuitem "Grass1 Dry"           "newent mapmodel 50"
+menuitem "Grass2 Dry"           "newent mapmodel 51"
+menuitem "Plant1 Dry"           "newent mapmodel 52"
+menuitem "Grass1 Snow"          "newent mapmodel 53"
+menuitem "Grass2 Snow"          "newent mapmodel 54"
+menuitem "Plant1 Snow"          "newent mapmodel 55"
 
 newmenu interior
 
