--- a/ac/packages/maps/ac_mines.cfg
+++ b/ac/packages/maps/ac_mines.cfg
@@ -4,7 +4,7 @@ mapmodelreset // start @ zero
 mapmodel 0 0 0 0 "nothing"
 mapmodel 0 0 0 0 "nothing" 
 mapmodel 0 0 0 0 "nothing"
-mapmodel 3  1 0 0 "comp_bridge"    //3
+mapmodel 1  2 0 0 "aard"    //3
 mapmodel 0 0 0 0 "ladder_10x"     //4
 mapmodel 1  3 0 0 "barrel"         //5
 mapmodel 1  2 0 0 "barrel2"        //6
