--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -40,7 +40,8 @@ newmenu setup
 
 menuitem "Select Team"           "showmenu team"
 menuitem "Select Skin"           "showmenu skins"
-menuitem "Select Weapon"         "showmenu primary"    
+menuitem "Select Weapon"         "showmenu primary"
+menuitem "Setup Crosshair"       "echo not yet.."   
 menuitem "Set Name"              "saycommand /name"
 
 newmenu skins
@@ -50,8 +51,8 @@ menuitem "Not Available"
 newmenu team
 
 menumdl playermodels/terrorist 0 1 50 10
-menuitem "Terrorists"			"team 0" "chmenumdl team playermodels/terrorist 0 1 50 10"
-menuitem "Counter Terrorists"		"team 1" "chmenumdl team playermodels/counterterrorist 0 1 50 10"
+menuitem "Cuban Liberations Army"			"team 0" "chmenumdl team playermodels/terrorist 0 1 50 10"
+menuitem "Rabid Viper Special Forces"		"team 1" "chmenumdl team playermodels/counterterrorist 0 1 50 10"
 
 newmenu multiplayer
 
@@ -206,11 +207,11 @@ menuitem "Poster"               "newent mapmodel 49"
 
 newmenu entities
 
-menuitem sf_spawn               "echo unknown command..."
-menuitem ff_spawn               "echo unknown command..."
-menuitem sf_flag                "echo unknown command..."
-menuitem ff_flag                "echo unknown command..."
-menuitem ladder                 "newent ladder"
+menuitem rvsf_spawn               "echo unknown command..."
+menuitem cla_spawn               "echo unknown command..."
+menuitem rvsf_flag                "echo unknown command..."
+menuitem cla_flag                "echo unknown command..."
+menuitem ladder                 "echo not yet..."
 
 newmenu pickups
 
