ladder entities added in maps
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@228 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -217,7 +217,7 @@ texture 0 "./boeck/wood_010.jpg"
 texture 0 "./boeck/wood_017.jpg"
 texture 0 "./makke/wood_01.jpg"
 texture 0 "./makke/wood_01_b.jpg"
-texture 0 "./makke/dcp_floor01.jpg"
+texture 0 "./arcitool/Zaun.jpg"
 texture 0 "./arcitool/n_f-natur2.jpg"
 texture 0 "./arcitool/Blockbohlen-natur.jpg"
 texture 0 "./arcitool/Zaun.jpg"
