--- a/ac/packages/maps/ac_mines.cfg
+++ b/ac/packages/maps/ac_mines.cfg
@@ -5,7 +5,7 @@ mapmodel 0 0 0 0 "nothing"
 mapmodel 0 0 0 0 "nothing" 
 mapmodel 0 0 0 0 "nothing"
 mapmodel 1  2 0 0 "aard"    //3
-mapmodel 0 0 0 0 "ladder_10x"     //4
+mapmodel 0 10 0 0 "ladder_10x"     //4
 mapmodel 1  3 0 0 "barrel"         //5
 mapmodel 1  2 0 0 "barrel2"        //6
 mapmodel 0  0 0 0 "elektro"        //7   
@@ -49,8 +49,8 @@ mapmodel 1 2 0 0 "gutter_v"
 mapmodel 0 0 0 0 "wrench"
 mapmodel 0 0 0 0 "screw"
 mapmodel 3 8 0 0 "minelift"
-mapmodel 0 0 0 0 "ladder_11x"  
-mapmodel 0 0 0 0 "ladder_15x"    
+mapmodel 0 11 0 0 "ladder_11x"  
+mapmodel 0 15 0 0 "ladder_15x"    
 mapmodel 0 0 0 0 "bulb" 
 
 
@@ -277,7 +277,7 @@ texture 0 "./noctua/ground/pebble01.jpg"
 texture 0 "./makke/11-Brick.jpg"                 
 texture 0 "./makke/bricky.jpg"               
 texture 0 "./noctua/ground/ground02.jpg"              
-texture 0 "./makke/dcp_floor01.jpg"               
+texture 0 "./makke/rock.jpg"          
 texture 0 "./jcdpc/stone.jpg"                
 texture 0 "./makke/stuck1.jpg"                
 texture 0 "./noctua/ground/ground06.jpg"               
