--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -15,7 +15,7 @@ registersound "free/tick5"           //S_GRENADE
 registersound "misc/pickup_ammo_clip"           //S_ITEMAMMO
 registersound "misc/pickup_health"           //S_ITEMHEALTH
 registersound "misc/pickup_armour"           //S_ITEMARMOUR
-registersound "free/tick9"           //S_ITEMPUP
+registersound "misc/tick9"           //S_ITEMPUP
 registersound "free/tick10"           //S_ITEMSPAWN
 registersound "weapon/clip_empty"      //S_NOAMMO
 registersound "free/tick11"           //S_PUPOUT
