flag dir change
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@246 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -69,14 +69,14 @@ alias universaldelta [
 bind MOUSE4 [ universaldelta  1 ]
 bind MOUSE5 [ universaldelta -1 ]
 
-bind 1 "weapon 1"
-bind 2 "weapon 2"
-bind 3 "weapon 3"
-bind 4 "weapon 4"
-bind 5 "weapon 5"
-bind 6 "weapon 6"
+//bind 1 "weapon 1"
+//bind 2 "weapon 2"
+//bind 3 "weapon 3"
+//bind 4 "weapon 4"
+//bind 5 "weapon 5"
+//bind 6 "weapon 6"
 bind R reload
-bind MOUSE2 altattack
+bind MOUSE2 "scoped 1; onrelease [ scoped 0 ]"
 
 alias delta_edit_0 [ editheight $flrceil $arg1 ]
 alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
@@ -105,5 +105,19 @@ hudgun 1
 
 bind KP_MINUS "conskip 1"
 bind KP_PLUS "conskip -1"
+
+bind 1 "newent light 16 100"
+bind 2 "newent light 13 120"
+bind 3 "newent light 10 150"
+bind 4 "newent light 8 150"
+bind 5 "newent light 6 175"
+bind 6 "newent light 5 180"
+bind 7 "newent light 4 100"
+bind 8 "newent light 3 225"
+bind 9 "newent light 2 225"
+
+bind right "vdelta 1"
+bind left "vdelta -1"
+
 
 
