team/skin/weapon menus
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@248 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -39,20 +39,42 @@ genmapitems "ac_complex ac_mines ac_depot ac_desert"
 newmenu setup
 
 menuitem "Select Team"           "showmenu team"
-menuitem "Select Skin"           "showmenu skins"
-menuitem "Select Weapon"         "showmenu primary"
+menuitem "Select Skins"           "showmenu skins"
+menuitem "Select Weapon"         "showmenu weapons"
 menuitem "Setup Crosshair"       "echo not yet.."   
 menuitem "Set Name"              "saycommand /name"
 
 newmenu skins
 
-menuitem "Not Available"
+menuitem "CLA Skins"              "showmenu cla"
+menuitem "RVSF Skins"             "showmenu rvsf"
+
+newmenu "cla"
+
+menumdl playermodels/terrorist/01/menu 0 1 50 5
+menuitem "Comandante"			"echo Comandante" "chmenumdl cla playermodels/terrorist/01/menu 0 1 50 5"
+menuitem "Psycho"               "echo Psycho" "chmenumdl cla playermodels/terrorist/02/menu 0 1 50 5"
+menuitem "Bomber"               "echo Bomber" "chmenumdl cla playermodels/terrorist/03/menu 0 1 50 5"
+menuitem "Ripper"               "echo Ripper" "chmenumdl cla playermodels/terrorist/04/menu 0 1 50 5"
+
+
+newmenu "rvsf"
+
+menumdl playermodels/counterterrorist/01/menu 0 1 50 5
+menuitem "Alpha"			"echo Alpha" "chmenumdl rvsf playermodels/counterterrorist/01/menu 0 1 50 5"
+menuitem "Tango"            "echo Tango" "chmenumdl rvsf playermodels/counterterrorist/02/menu 0 1 50 5"
+menuitem "Cobra"            "echo Cobra" "chmenumdl rvsf playermodels/counterterrorist/03/menu 0 1 50 5"
+menuitem "Viper"            "echo Viper" "chmenumdl rvsf playermodels/counterterrorist/04/menu 0 1 50 5"
+menuitem "Swat"             "echo Swat" "chmenumdl rvsf playermodels/counterterrorist/05/menu 0 1 50 5"
+menuitem "Police"           "echo Police" "chmenumdl rvsf playermodels/counterterrorist/06/menu 0 1 50 5"
+
+
 
 newmenu team
 
-menumdl playermodels/terrorist 0 1 50 10
-menuitem "Cuban Liberations Army"			"team 0" "chmenumdl team playermodels/terrorist 0 1 50 10"
-menuitem "Rabid Viper Special Forces"		"team 1" "chmenumdl team playermodels/counterterrorist 0 1 50 10"
+menumdl playermodels/terrorist/01/menu 0 1 50 5
+menuitem "Cuban Liberations Army"			"team 0" "chmenumdl team playermodels/terrorist/01/menu 0 1 50 5"
+menuitem "Rabid Viper Special Forces"		"team 1" "chmenumdl team playermodels/counterterrorist/04/menu 0 1 50 5"
 
 newmenu multiplayer
 
@@ -69,16 +91,6 @@ menuitem "Team Survivor"          "mode 4;  showmenu maps"
 menuitem "Capture the Flag"       "mode 5;  showmenu maps"
 menuitem "Deathmatch"        	  "mode 2;  showmenu maps"
 menuitem "Deathmatch Arena (LMS)" "mode 3;  showmenu maps"
-
-
-newmenu spawnmode
-
-menuitem "Instant Respawn"	"spawnmode 0; showmenu maps"
-menuitem "10sec Delay"		"spawnmode 1; showmenu maps" 
-menuitem "15sec Delay"		"spawnmode 3; showmenu maps"
-menuitem "1min Round"		"spawnmode 4; showmenu maps"
-menuitem "2min Round"		"spawnmode 5; showmenu maps"
-
 
 newmenu editing
 
@@ -247,30 +259,30 @@ menuitem "Newmap 256x256 cubes"               "newmap 8"
 menuitem "Increase mapsize (2x)"              "mapenlarge"
 menuitem "Set map title/author"               "saycommand /mapmsg"
 
-bind B "showmenu items"
+bind B "showmenu weapons"
 
-newmenu items 
+//newmenu items 
 
-menuitem "Primary Weapon"	"showmenu primary"
-menuitem "Secondary Weapon"	"showmenu secondary"
-menuitem "Equipment"	        "showmenu equipment"
+//menuitem "Primary Weapon"	"showmenu primary"
+//menuitem "Secondary Weapon"	"showmenu secondary"
+//menuitem "Equipment"	        "showmenu equipment"
 
-newmenu "primary"
+newmenu "weapons"
 
-//menumdl vwep/assault 0 1 40 60
-menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" // "chmenumdl primary vwep/assault 0 1 40 60"
-menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl primary vwep/subgun 0 1 40 60"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl primary vwep/sniper 0 1 40 60"
-menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl primary vwep/shotgun 0 1 40 60"
+menumdl weapons/assault/menu 0 1 75 12
+menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu 0 1 75 12"
+menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu 0 1 75 12"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu 0 1 75 12"
+menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu 0 1 75 12"
 
-newmenu "secondary"
-menumdl vwep/semipistol 0 1 40 60
-menuitem "Mk-77 Semi-Automatic Pistol"	        "item 1;echo MTP 57 Semi-Automatic Pistol Chosen" 
+//newmenu "secondary"
+//menumdl vwep/semipistol 0 1 40 60
+//menuitem "Mk-77 Semi-Automatic Pistol"	        "item 1;echo MTP 57 Semi-Automatic Pistol Chosen" 
 
-newmenu "equipment"
-menumdl vwep/grenade_static 0 1 40 80
-menuitem "DR-17 HE-Grenade"			"echo DR-17 HE-Grenade chosen" "chmenumdl equipment vwep/grenade_static 0 1 40 80"
-menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen" "chmenumdl equipment pickups/kevlar 0 1 40 20"
+//newmenu "equipment"
+//menumdl vwep/grenade_static 0 1 40 80
+//menuitem "DR-17 HE-Grenade"			"echo DR-17 HE-Grenade chosen" "chmenumdl equipment vwep/grenade_static 0 1 40 80"
+//menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen" "chmenumdl equipment pickups/kevlar 0 1 40 20"
 
 newmenu options
 
