--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -359,6 +359,7 @@ newmenu credits
 
 menuitem "Arghvark    Project Leader" ""
 menuitem "              Concept, Coding" ""
+menuitem "Verbal       QA, Advisor, Lead Tester" ""
 menuitem "driAn        Lead Coder, Webdesign" "" 
 menuitem "makkE       Lead Artist" ""
 menuitem "              Maps, Models, Skins, Animation" ""
@@ -366,8 +367,10 @@ menuitem "              Sound, some Textures, 2D-Art" ""
 menuitem "Nieb         Models, Hosting" ""
 menuitem "Mitaman     Maps,Ressources" ""
 menuitem "Rick         Bots, Win32-Compiling" ""
-menuitem "Verbal       QA, Advisor, Lead Tester" ""
 menuitem ""
 menuitem "Thanks to:" ""
 menuitem "Wouter van Oortmersson, DCP (Music)," ""
 menuitem "JCDPC (Laptop Model, Company), dtd (Hosting), Boeck" ""
+menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool,"
+menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr,"
+menuitem "Mayang.com, Chris Zastrow (textures)"
