*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@250 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -37,4 +37,7 @@ registersound "player/splash2"      //S_SPLASH2
 registersound "ppm/deathr"          //S_GRUNT1
 registersound "ppm/paine"           //S_GRUNT2
 registersound "ppm/deathe"         //S_RUMBLE
-registersound "free/tick17"           //S_NULL
+registersound "ctf/flagdrop"       //S_FLAGDROP
+registersound "ctf/flagpickup"      //S_FLAGPICKUP
+registersound "ctf/flagreturn"      //S_FLAGRETURN
+registersound "ctf/flagscore"       //S_FLAGSCORE
