*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@255 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -18,7 +18,7 @@ registersound "misc/pickup_armour"           //S_ITEMARMOUR
 registersound "misc/tick9"           //S_ITEMPUP
 registersound "free/tick10"           //S_ITEMSPAWN
 registersound "weapon/clip_empty"      //S_NOAMMO
-registersound "free/tick11"           //S_PUPOUT
+registersound "free/tick11"           //S_PUPOUT 20
 registersound "player/pain1"        //S_PAIN1
 registersound "player/pain2"        //S_PAIN2
 registersound "player/pain3"        //S_PAIN3
@@ -34,10 +34,12 @@ registersound "free/tick15"           //S_FLAUNCH
 registersound "free/tick16"           //S_FEXPLODE
 registersound "player/splash1"      //S_SPLASH1
 registersound "player/splash2"      //S_SPLASH2
-registersound "ppm/deathr"          //S_GRUNT1
+registersound "ppm/deathr"          //S_GRUNT1 16
 registersound "ppm/paine"           //S_GRUNT2
 registersound "ppm/deathe"         //S_RUMBLE
 registersound "ctf/flagdrop"       //S_FLAGDROP
 registersound "ctf/flagpickup"      //S_FLAGPICKUP
 registersound "ctf/flagreturn"      //S_FLAGRETURN
 registersound "ctf/flagscore"       //S_FLAGSCORE
+registersound "weapon/grenade_pull" // S_GRENADEPULL
+registersound "weapon/grenade_throw" // S_GRENADETHROW
