*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@256 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -31,7 +31,7 @@ registersound "free/tick12"           //S_SUICIDE
 registersound "free/tick13"           //S_FALL1
 registersound "free/tick14"           //S_FALL2
 registersound "free/tick15"           //S_FLAUNCH
-registersound "free/tick16"           //S_FEXPLODE
+registersound "weapon/grenade_exp"           //S_FEXPLODE
 registersound "player/splash1"      //S_SPLASH1
 registersound "player/splash2"      //S_SPLASH2
 registersound "ppm/deathr"          //S_GRUNT1 16
@@ -43,3 +43,4 @@ registersound "ctf/flagreturn"      //S_FLAGRETURN
 registersound "ctf/flagscore"       //S_FLAGSCORE
 registersound "weapon/grenade_pull" // S_GRENADEPULL
 registersound "weapon/grenade_throw" // S_GRENADETHROW
+registersound "weapon/pistol_reload" // S_RAKIMBO
