--- a/ac/packages/models/weapons/grenade/animations.cfg
+++ b/ac/packages/models/weapons/grenade/animations.cfg
@@ -5,6 +5,11 @@
 //
 // md3animation $first	$num	$loop	$fps
 
-md3animation	0	1	0	25
-md3animation	8	8	1	25
-md3animation	0	1	0	25
+//md3animation	0	1	0	25
+//md3animation	8	8	1	25
+//md3animation	0	1	0	25
+
+md3animation 0 1 0 25 // idle
+md3animation 8 20 0 25 // grenade pull
+md3animation 21 33 0 25 // grenade throw
+md3animation 0 1 0 25 // reload
