--- a/ac/packages/models/weapons/grenade/animations.cfg
+++ b/ac/packages/models/weapons/grenade/animations.cfg
@@ -10,6 +10,6 @@
 //md3animation	0	1	0	25
 
 md3animation 0 1 0 25 // idle
-md3animation 8 20 0 25 // grenade pull
-md3animation 21 33 0 25 // grenade throw
-md3animation 0 1 0 25 // reload
+md3animation 8 13 0 25 // grenade pull
+md3animation 21 13 0 25 // grenade throw
+//md3animation 33 18 0 25 // reload
