--- a/ac/packages/models/weapons/grenade/animations.cfg
+++ b/ac/packages/models/weapons/grenade/animations.cfg
@@ -12,4 +12,4 @@
 md3animation 0 1 0 25 // idle
 md3animation 8 13 0 25 // grenade pull
 md3animation 21 13 0 25 // grenade throw
-//md3animation 33 18 0 25 // reload
+md3animation 0 1 0 25 // reload
